--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.4.0",
+    "@iconify-json/mdi": "^1.1.66",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.9.1",
+    "astro-icon": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
